objects/Cash_Flow_Opp__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Serviced__c</fullName>
        <label>Amount Serviced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assigned_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Payment</label>
        <referenceTo>Assigned_Payments__c</referenceTo>
        <relationshipLabel>Cash Flows</relationshipLabel>
        <relationshipName>Cash_Flows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Serviced__c</fullName>
        <label>Date Serviced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Holdback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Holdback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Amount__c</fullName>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cash Flows</relationshipLabel>
        <relationshipName>Cash_Flows1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Principal__c</fullName>
        <label>Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sent_to_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to Customer</label>
        <type>Checkbox</type>
    </fields>
    <label>Cash Flow</label>
    <nameField>
        <displayFormat>CF-{0000}</displayFormat>
        <label>Cash Flow #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Flows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>